--- a/g/groning-oskar/index.html
+++ b/g/groning-oskar/index.html
@@ -39,7 +39,7 @@
 			</p>
 			<blockquote>
 				<p>
-					Because I want to tell those deniers: <span style="text-decoration: underline;">I have seen the gas chambers, I have seen the crematoria, I have seen the burning pits. [&hellip;] I was there.
+					Because I want to tell those deniers: <u>I have seen the gas chambers, I have seen the crematoria, I have seen the burning pits. [&hellip;] I was there.</u>
 				</p>
 			</blockquote>
 			<p>
