--- a/p/poland/index.html
+++ b/p/poland/index.html
@@ -49,7 +49,7 @@
 				Hence, the claimed death toll of these camps amounted to some 2.6 million Jewish victims. If we add to this the deaths in the many Polish ghettos, which are difficult to quantify, then Poland was the location where half of the six million victims perished who are claimed by the orthodoxy.
 			</p>
 			<p>
-				It needs to be stressed that the camps listed above were <span style="text-decoration: underline;">not <i>Polish</i> camps. They were German camps on Polish soil.
+				It needs to be stressed that the camps listed above were <u>not</u> <i>Polish</i> camps. They were German camps on Polish soil.
 			</p>
 			<h4>
 				Victim
