--- a/change-log/index.html
+++ b/change-log/index.html
@@ -262,7 +262,7 @@
 				<li>Entry on <a href="/n/nebe-arthur/index.html">Nebe, Arthur</a>: The last source given in this entry was corrected from 2022 to 2022c.</li>
 				<li>Entry on <a href="/n/neuengamme/index.html">Neuengamme</a>: The source given was updated from Mattogno 2022 (first edition) to <a href="/bibliography/index.html#Mattogno_Jansson">Mattogno/Jansson 2024</a> (2nd ed.); with a parallel update in the Bibliography: Mattogno, Carlo, Friedrich Jansson 2024. <i>The Neuengamme and Sachsenhausen Gas Chambers: With a Focus on British Investigations for the Tesch Trial,</i> 2nd ed., Armreg Ltd, London, 2024.</li>
 				<li>Entry on <a href="/o/ohrdruf/index.html">Ohrdruf</a>: The camp&rsquo;s location is now briefly described.</li>
-				<li>Entry on <a href="/p/pohl-oswald/index.html">Pohl, Oswald</a>: A repeat reference to a document was deleted, which by mistake was given a wrong date, hence the repetition was initially left unnoticed (26 December 1943 should have been 26. Oct., which was mentioned before, but without the day (now added) (<span style="text-decoration: line-through;"><q>He repeated this again in a circular to all camp commandants on 26 December 1943: &lsquo;All measures of the commanders have to focus on the health and productivity of the inmates.&rsquo;</q>)</li>
+				<li>Entry on <a href="/p/pohl-oswald/index.html">Pohl, Oswald</a>: A repeat reference to a document was deleted, which by mistake was given a wrong date, hence the repetition was initially left unnoticed (26 December 1943 should have been 26. Oct., which was mentioned before, but without the day (now added) (<strike><q>He repeated this again in a circular to all camp commandants on 26 December 1943: &lsquo;All measures of the commanders have to focus on the health and productivity of the inmates.&rsquo;</q></strike>)</li>
 			</ul>
 			<h3>
 				October 11, 2024
@@ -956,7 +956,7 @@
 				<tbody>
 					<tr>
 						<td>In fact, the latter were probably blazing at their highest intensity when Gr&ouml;ning arrived in late September 1942. This must have left quite an impression on the young man.</td>
-						<td>In fact, the latter were probably blazing at their highest intensity when Gr&ouml;ning arrived in late September 1942. <span style="text-decoration: underline;">However, these pyres did not burn gas-chamber victims, as the orthodoxy claims, but thousands of victims of the raging typhus epidemic that had gotten out of control in the summer of 1942. (See the entry on Birkenau, and the section on Auschwitz in the entry on mass graves.) These fires left quite an impression on the young man.</td>
+						<td>In fact, the latter were probably blazing at their highest intensity when Gr&ouml;ning arrived in late September 1942. <u>However, these pyres did not burn gas-chamber victims, as the orthodoxy claims, but thousands of victims of the raging typhus epidemic that had gotten out of control in the summer of 1942. (See the entry on Birkenau, and the section on Auschwitz in the entry on mass graves.) These fires left quite an impression on the young man.</u></td>
 					</tr>
 				</tbody>
 			</table>
