--- a/h/hitler-adolf/index.html
+++ b/h/hitler-adolf/index.html
@@ -85,7 +85,7 @@
 			</p>
 			<blockquote>
 				<p>
-					If today some citizens cried because Jews have to <span style="text-decoration: underline;">emigrate from Germany, then this throws a light on these types of self-righteous philistines.
+					If today some citizens cried because Jews have to <u>emigrate from Germany,</u> then this throws a light on these types of self-righteous philistines.
 				</p>
 			</blockquote>
 			<p>
@@ -101,7 +101,7 @@
 			</p>
 			<blockquote>
 				<p>
-					If I extract the Jew today, then our bourgeoisie becomes distressed. What happens to him? But did the same people care what happened to those Germans who had to <span style="text-decoration: underline;">emigrate? [&hellip;] The Jew <span style="text-decoration: underline;">must leave Europe. Otherwise we won&rsquo;t come to a European understanding. [&hellip;] At the end of it: I don&rsquo;t know, I&rsquo;m being so colossally humane. At the time of the papal reign in Rome, Jews were maltreated. [&hellip;] I simply say: they must go. If he goes phut in the process, I can&rsquo;t help it. I see only one thing: <span style="text-decoration: underline;">absolute extermination, if they won&rsquo;t go voluntarily.
+					If I extract the Jew today, then our bourgeoisie becomes distressed. What happens to him? But did the same people care what happened to those Germans who had to <u>emigrate</u>? [&hellip;] The Jew <u>must leave Europe</u>. Otherwise we won&rsquo;t come to a European understanding. [&hellip;] At the end of it: I don&rsquo;t know, I&rsquo;m being so colossally humane. At the time of the papal reign in Rome, Jews were maltreated. [&hellip;] I simply say: they must go. If he goes phut in the process, I can&rsquo;t help it. I see only one thing: <u>absolute extermination</u>, if they won&rsquo;t go voluntarily.
 				</p>
 			</blockquote>
 			<p>
@@ -109,7 +109,7 @@
 			</p>
 			<blockquote>
 				<p>
-					The Jews must <span style="text-decoration: underline;">get out of Europe! It is best they <span style="text-decoration: underline;">go to Russia. I don&rsquo;t have any pity on the Jews.
+					The Jews must <u>get out of Europe</u>! It is best they <u>go to Russia</u>. I don&rsquo;t have any pity on the Jews.
 				</p>
 			</blockquote>
 			<p>
@@ -117,7 +117,7 @@
 			</p>
 			<blockquote>
 				<p>
-					It is therefore indicative that the upper classes, who never cared for the hundreds of thousands of German <span style="text-decoration: underline;">emigrants and their hardship, now feel pity on the Jews, although the Jews have their accomplices throughout the entire world and are the most climate-resistant species there is. Jews thrive everywhere, even in Lapland and Siberia.
+					It is therefore indicative that the upper classes, who never cared for the hundreds of thousands of German <u>emigrants</u> and their hardship, now feel pity on the Jews, although the Jews have their accomplices throughout the entire world and are the most climate-resistant species there is. Jews thrive everywhere, even in Lapland and Siberia.
 				</p>
 			</blockquote>
 			<p>
@@ -125,13 +125,13 @@
 			</p>
 			<blockquote>
 				<p>
-					Our so-called bourgeoisie laments over the same Jew who stabbed us in the back in the past when he is <span style="text-decoration: underline;">deported to the East. [&hellip;]
+					Our so-called bourgeoisie laments over the same Jew who stabbed us in the back in the past when he is <u>deported to the East</u>. [&hellip;]
 				</p>
 				<p>
 					If a pronounced population parasite is rendered harmless on behalf of the state by slaying him, for instance, then the entire bourgeoisie screams that this is a brutish state. [&hellip;]
 				</p>
 				<p>
-					Not a single one of those who shed crocodile tears at the <span style="text-decoration: underline;">deportation of the Jews to the east considers that the Jew as a parasite is the most climate-resistant individual on the planet who, in contrast to the German, gets accustomed to Lapland as much as to the tropics.
+					Not a single one of those who shed crocodile tears at the <u>deportation</u> of the Jews to the east considers that the Jew as a parasite is the most climate-resistant individual on the planet who, in contrast to the German, gets accustomed to Lapland as much as to the tropics.
 				</p>
 			</blockquote>
 			<p>
@@ -139,7 +139,7 @@
 			</p>
 			<blockquote>
 				<p>
-					All of western Europe must be freed of the Jews within a given period. [&hellip;] It is therefore not recommendable to <span style="text-decoration: underline;">deport them to Siberia because with their climate-resistance, they would only become even more hardened. It is better &mdash; as the Arabs don&rsquo;t want them in Palestine &mdash; to <span style="text-decoration: underline;">transport them to Africa and thus submit them to a climate which impairs every person of our resilience, thereby eliminating all points of common spheres of interest with the European part of humanity.
+					All of western Europe must be freed of the Jews within a given period. [&hellip;] It is therefore not recommendable to <u>deport them</u> to Siberia because with their climate-resistance, they would only become even more hardened. It is better &mdash; as the Arabs don&rsquo;t want them in Palestine &mdash; to <u>transport them</u> to Africa and thus submit them to a climate which impairs every person of our resilience, thereby eliminating all points of common spheres of interest with the European part of humanity.
 				</p>
 			</blockquote>
 			<p>
@@ -147,7 +147,7 @@
 			</p>
 			<blockquote>
 				<p>
-					<span style="text-decoration: underline;">After the end of the war he [Hitler] will rigorously take the position that he will destroy one city after another, if the Jews don&rsquo;t come out and <span style="text-decoration: underline;">emigrate to <a href="/m/madagascar/index.html">Madagascar</a> or some other Jewish homeland.
+					<u>After the end of the war</u> he [Hitler] will rigorously take the position that he will destroy one city after another, if the Jews don&rsquo;t come out and <u>emigrate</u> to <a href="/m/madagascar/index.html">Madagascar</a> or some other Jewish homeland.
 				</p>
 			</blockquote>
 			<p>
