--- a/r/religion-holocaust-as/index.html
+++ b/r/religion-holocaust-as/index.html
@@ -27,29 +27,29 @@
 				The old-time religions are no longer a taboo. They have been replaced by a new religion that is kept sacred by a large majority &mdash; if not consciously, then at least as a well-trained reflex due to massive societal conditioning. This new religion has all the hallmarks of a fully developed religion, except for one feature: It has no God. It knows no absolute good, no absolute love. It knows only evil:
 			</p>
 			<ul>
-				<li><span style="text-decoration: underline;">Monotheism = Thou shalt not abhor any other genocide as much as, and next to, the Jewish. The Holocaust is unique.</li>
-				<li><span style="text-decoration: underline;">Devil Incarnate = <a href="/h/hitler-adolf/index.html">Adolf Hitler</a>.</li>
-				<li><span style="text-decoration: underline;">Witches, sorcerers, wizards and warlocks = the evil Nazis.</li>
-				<li><span style="text-decoration: underline;">Absolute Evil = viral, eliminatory anti-Semitism.</li>
-				<li><span style="text-decoration: underline;">Golgotha = Auschwitz is the million-fold Jewish Golgotha. The sacrifice of the Christ-god at Calvary has been eclipsed by the suffering of the Jewish people at Auschwitz.</li>
-				<li><span style="text-decoration: underline;">The Martyrs = Jews who died in the Holocaust.</li>
-				<li><span style="text-decoration: underline;">The Saints = Holocaust <a href="/s/survivors/index.html">survivors</a>. <q>Because survivors are now revered as secular saints, one doesn&rsquo;t dare question them. Preposterous statements pass without comment.</q> &mdash; Norman <a href="/bibliography/index.html#Finkelstein2000">Finkelstein (2000</a>, p. 82).</li>
-				<li><span style="text-decoration: underline;">The Beatified = the Righteous of the Nations, Gentiles who helped Jews survive to become saints.</li>
-				<li><span style="text-decoration: underline;">Infallibility = Jewish Holocaust witnesses and orthodox scholars always speak the truth, and if they accidentally get it wrong, it was an honest mistake caused by the Nazis having confused them.</li>
-				<li><span style="text-decoration: underline;">Holy Trinitarian Dogma = the three untouchable tenets of the holy teachings: a <a href="/p/plan-to-exterminate-the-jews/index.html">plan</a> to exterminate, <a href="/h/homicidal-gas-chambers/index.html">gas chambers</a> to implement it, and <a href="/s/six-million/index.html">six million</a> Jewish victims as a result.</li>
-				<li><span style="text-decoration: underline;">Belief in Miracles = belief in the plan to exterminate European Jews despite the complete, total absence of any documental evidence whatsoever; belief in a weapon of mass destruction whose <i>primary characteristic</i> is its physical impossibility; and belief in the traceless disappearance of millions of bodies.</li>
-				<li><span style="text-decoration: underline;">Original Sin = the guilt of what the perpetrators did, and the rest of the world allowed to happen to God&rsquo;s Chosen People.</li>
-				<li><span style="text-decoration: underline;">Sin = any doubt in the Holy Dogma, or the Infallibility, or the Uniqueness.</li>
-				<li><span style="text-decoration: underline;">Heresy = those who openly declare their disbelieve, or dare to deny or even refute the Holy Dogma are ethically damned, excluded from society, denied civil rights, economically ruined, and ultimately thrown into jail, if not outright attacked and lynched.</li>
-				<li><span style="text-decoration: underline;">Redemption = accomplished by the ceaseless flow of money from anyone who can be framed as guilty or insufficiently respectful to Israel and/or Jewish pressure groups.</li>
-				<li><span style="text-decoration: underline;">Holy Sites = Holocaust crime scenes, such as the <a href="/h/homicidal-gas-chambers/index.html">gas chambers</a> of <a href="/a/auschwitz/index.html">Auschwitz</a>, <a href="/m/majdanek/index.html">Majdanek</a>, <a href="/d/dachau/index.html">Dachau</a>, <a href="/n/neuengamme/index.html">Neuengamme</a>, <a href="/s/sachsenhausen/index.html">Sachsenhausen</a>; the killing fields of the extermination camps, such as <a href="/c/chelmno/index.html">Che&#322;mno</a>, <a href="/b/belzec/index.html">Belzec</a>, <a href="/s/sobibor/index.html">Sobib&oacute;r</a>, <a href="/t/treblinka/index.html">Treblinka</a>; or the (imagined) mass graves at <a href="/b/babi-yar/index.html">Babi Yar</a>.</li>
-				<li><span style="text-decoration: underline;">Holy Shrines = Holocaust Memorial sites and museums.</li>
+				<li><u>Monotheism</u> = Thou shalt not abhor any other genocide as much as, and next to, the Jewish. The Holocaust is unique.</li>
+				<li><u>Devil Incarnate</u> = <a href="/h/hitler-adolf/index.html">Adolf Hitler</a>.</li>
+				<li><u>Witches, sorcerers, wizards and warlocks</u> = the evil Nazis.</li>
+				<li><u>Absolute Evil</u> = viral, eliminatory anti-Semitism.</li>
+				<li><u>Golgotha</u> = Auschwitz is the million-fold Jewish Golgotha. The sacrifice of the Christ-god at Calvary has been eclipsed by the suffering of the Jewish people at Auschwitz.</li>
+				<li><u>The Martyrs</u> = Jews who died in the Holocaust.</li>
+				<li><u>The Saints</u> = Holocaust <a href="/s/survivors/index.html">survivors</a>. <q>Because survivors are now revered as secular saints, one doesn&rsquo;t dare question them. Preposterous statements pass without comment.</q> &mdash; Norman <a href="/bibliography/index.html#Finkelstein2000">Finkelstein (2000</a>, p. 82).</li>
+				<li><u>The Beatified</u> = the Righteous of the Nations, Gentiles who helped Jews survive to become saints.</li>
+				<li><u>Infallibility</u> = Jewish Holocaust witnesses and orthodox scholars always speak the truth, and if they accidentally get it wrong, it was an honest mistake caused by the Nazis having confused them.</li>
+				<li><u>Holy Trinitarian Dogma</u> = the three untouchable tenets of the holy teachings: a <a href="/p/plan-to-exterminate-the-jews/index.html">plan</a> to exterminate, <a href="/h/homicidal-gas-chambers/index.html">gas chambers</a> to implement it, and <a href="/s/six-million/index.html">six million</a> Jewish victims as a result.</li>
+				<li><u>Belief in Miracles</u> = belief in the plan to exterminate European Jews despite the complete, total absence of any documental evidence whatsoever; belief in a weapon of mass destruction whose <i>primary characteristic</i> is its physical impossibility; and belief in the traceless disappearance of millions of bodies.</li>
+				<li><u>Original Sin</u> = the guilt of what the perpetrators did, and the rest of the world allowed to happen to God&rsquo;s Chosen People.</li>
+				<li><u>Sin</u> = any doubt in the Holy Dogma, or the Infallibility, or the Uniqueness.</li>
+				<li><u>Heresy</u> = those who openly declare their disbelieve, or dare to deny or even refute the Holy Dogma are ethically damned, excluded from society, denied civil rights, economically ruined, and ultimately thrown into jail, if not outright attacked and lynched.</li>
+				<li><u>Redemption</u> = accomplished by the ceaseless flow of money from anyone who can be framed as guilty or insufficiently respectful to Israel and/or Jewish pressure groups.</li>
+				<li><u>Holy Sites</u> = Holocaust crime scenes, such as the <a href="/h/homicidal-gas-chambers/index.html">gas chambers</a> of <a href="/a/auschwitz/index.html">Auschwitz</a>, <a href="/m/majdanek/index.html">Majdanek</a>, <a href="/d/dachau/index.html">Dachau</a>, <a href="/n/neuengamme/index.html">Neuengamme</a>, <a href="/s/sachsenhausen/index.html">Sachsenhausen</a>; the killing fields of the extermination camps, such as <a href="/c/chelmno/index.html">Che&#322;mno</a>, <a href="/b/belzec/index.html">Belzec</a>, <a href="/s/sobibor/index.html">Sobib&oacute;r</a>, <a href="/t/treblinka/index.html">Treblinka</a>; or the (imagined) mass graves at <a href="/b/babi-yar/index.html">Babi Yar</a>.</li>
+				<li><u>Holy Shrines</u> = Holocaust Memorial sites and museums.</li>
 				<li><u>Holy Pilgrimages</u> = voluntary visits of millions of individuals as well as compulsory visits by entire school classes and college courses from all over the world to the Holy Sites and Shrines.</li>
-				<li><span style="text-decoration: underline;">Holy Relics = the <a href="/s/shoes-of-deportees/index.html">shoes</a>, <a href="/h/hair-of-deportees/index.html">hair</a>, <a href="/g/gold-teeth/index.html">teeth</a>, <a href="/w/wedding-rings/index.html">rings</a>, suitcases left behind by the deportees.</li>
-				<li><span style="text-decoration: underline;">Holy Warriors = Nazi Hunters, such as Simon Wiesenthal, Fritz Bauer, Gideon Hausner.</li>
-				<li><span style="text-decoration: underline;">Prophets = Jewish pseudo-intellectuals spreading meaningless and unverifiable nonsense, such as <a href="/w/wiesel-elie/index.html">Elie Wiesel</a>, Claude Lanzmann and Gitta Sereny.</li>
-				<li><span style="text-decoration: underline;">High Priests = those who inculcate the world with what to believe, such as Deborah Lipstadt, Robert Jan van Pelt, Yitzak Arad, Michael Berenbaum, Serge Klarsfeld and Raul Hilberg.</li>
-				<li><span style="text-decoration: underline;">The One Commandment = this religion does not have <i>Ten</i> Commandments, but only one Prime Directive: Thou shalt prevent a future Holocaust by all means necessary.</li>
+				<li><u>Holy Relics</u> = the <a href="/s/shoes-of-deportees/index.html">shoes</a>, <a href="/h/hair-of-deportees/index.html">hair</a>, <a href="/g/gold-teeth/index.html">teeth</a>, <a href="/w/wedding-rings/index.html">rings</a>, suitcases left behind by the deportees.</li>
+				<li><u>Holy Warriors</u> = Nazi Hunters, such as Simon Wiesenthal, Fritz Bauer, Gideon Hausner.</li>
+				<li><u>Prophets</u> = Jewish pseudo-intellectuals spreading meaningless and unverifiable nonsense, such as <a href="/w/wiesel-elie/index.html">Elie Wiesel</a>, Claude Lanzmann and Gitta Sereny.</li>
+				<li><u>High Priests</u> = those who inculcate the world with what to believe, such as Deborah Lipstadt, Robert Jan van Pelt, Yitzak Arad, Michael Berenbaum, Serge Klarsfeld and Raul Hilberg.</li>
+				<li><u>The One Commandment</u> = this religion does not have <i>Ten</i> Commandments, but only one Prime Directive: Thou shalt prevent a future Holocaust by all means necessary.</li>
 			</ul>
 			<blockquote>
 				<p>
