encode special characters

--- a/a/air-photos/index.html
+++ b/a/air-photos/index.html
@@ -70,7 +70,7 @@
 				<li><a href="/n/nyiszli-miklos/index.html">Miklos Nyiszli</a></li>
 				<li><a href="/p/paisikovic-dov/index.html">Dov Paisikovic</a></li>
 				<li><a href="/r/rosenblum-joshuah/index.html">Joshuah Rosenblum</a></li>
-				<li><a href="/r/rosin-arnost/index.html">Arnošt Rosin</a></li>
+				<li><a href="/r/rosin-arnost/index.html">Arno&scaron;t Rosin</a></li>
 				<li><a href="/s/sackar-josef/index.html">Josef Sackar</a></li>
 				<li><a href="/s/schwarz-deszo/index.html">Desz&ouml; Schwarz</a></li>
 				<li><a href="/t/tauber-henryk/index.html">Henryk Tauber</a></li>
