--- a/bibliography/index.html
+++ b/bibliography/index.html
@@ -304,7 +304,7 @@
 				<li><a id="Madden"></a>Madden, Catherine, Jim Kelly. <q>Holocaust man&rsquo;s claims queried,</q> <i>The Sunday Times </i>(Perth), 31 Oct. 2004.</li>
 				<li><a id="Margry"></a>Margry, Karel. <q>The Katyn Massacre,</q> in: <i>After the Battle,</i> Vol. 92, 1996, pp. 1-33.</li>
 				<li><a id="Mark"></a>Mark, Jonathan. <q>Memory Plays Tricks About Mengele,</q> <i>The Times of Israel,</i> 7 April 2020; <a href="https://www.jta.org/newyork">jewishweek.timesofisrael.com/memory-plays-tricks-about-mengele/</a>.</li>
-				<li><a id="Marsalek"></a>Marš&aacute;lek, Hans. <i>Die Geschichte des Konzentrationslagers Mauthausen,</i> &ouml;sterreichische Lagergemeinschaft Mauthausen, Vienna, 1980.</li>
+				<li><a id="Marsalek"></a>Mar&scaron;&aacute;lek, Hans. <i>Die Geschichte des Konzentrationslagers Mauthausen,</i> &ouml;sterreichische Lagergemeinschaft Mauthausen, Vienna, 1980.</li>
 				<li><a id="Mason"></a>Mason, Alpheus T. <i>Harlan Fiske Stone: Pillar of the Law,</i> Viking, New York, 1956.</li>
 				<li><a id="Mattogno1988"></a>Mattogno, Carlo 1988. <q><a href="https://codoh.com">The Myth of the Extermination of the Jews Part II</a>,</q> <i>The Journal of Historical Review,</i> Vol. 8, No. 3, 1988, pp. 261-302.</li>
 				<li><a id="Mattogno1988a"></a>Mattogno, Carlo 1988a. <i>Medico ad Auschwitz: Anatomia di un falso.</i> Edizioni La Sfinge, Parma, 1988.</li>
