--- a/h/himmler-visits/index.html
+++ b/h/himmler-visits/index.html
@@ -37,7 +37,7 @@
 				<li><a href="/m/mandelbaum-henryk/index.html">Henryk Mandelbaum</a> (Auschwitz)</li>
 				<li><a href="/o/ochshorn-isaac-egon/index.html">Isaac Egon Ochshorn</a> (Auschwitz)</li>
 				<li><a href="/p/puchala-lucjan/index.html">Lucjan Pucha&#322;a</a> (Auschwitz)</li>
-				<li><a href="/r/rosin-arnost/index.html">Arnošt Rosin</a> (Auschwitz)</li>
+				<li><a href="/r/rosin-arnost/index.html">Arno&scaron;t Rosin</a> (Auschwitz)</li>
 				<li><a href="/s/suss-franz/index.html">Franz S&uuml;ss</a> (Auschwitz)</li>
 				<li><a href="/v/vrba-rudolf/index.html">Rudolf Vrba</a> (Auschwitz)</li>
 				<li><a href="/w/wetzler-alfred/index.html">Alfred Wetzler</a> (Auschwitz)</li>
