--- a/l/lampshades-of-human-skin/index.html
+++ b/l/lampshades-of-human-skin/index.html
@@ -45,7 +45,7 @@
 				The trials against Ilse Koch were the worst examples of the many show trials conducted after World War Two against alleged <q>Nazi criminals,</q> which have a shocking resemblance to medieval <a href="/w/witch-trials/index.html">witch trials</a>.
 			</p>
 			<p>
-				(For more details, see <a href="/bibliography/index.html#Rudolf2023">Rudolf 2023</a>, pp. 94-97; see also the entry on <a href="/m/marsalek-hans/index.html">Hans Marš&aacute;lek</a>.)
+				(For more details, see <a href="/bibliography/index.html#Rudolf2023">Rudolf 2023</a>, pp. 94-97; see also the entry on <a href="/m/marsalek-hans/index.html">Hans Mar&scaron;&aacute;lek</a>.)
 			</p>
 			<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
