--- a/o/open-air-incinerations/index.html
+++ b/o/open-air-incinerations/index.html
@@ -363,7 +363,7 @@
 						<td> 15.5 m </td>
 					</tr>
 					<tr>
-						<td> <a href="/r/rosin-arnost/index.html">Arnošt Rosin</a>‡ </td>
+						<td> <a href="/r/rosin-arnost/index.html">Arno&scaron;t Rosin</a>‡ </td>
 						<td> &mdash; </td>
 						<td> 30 m </td>
 						<td> 15 m </td>
