--- a/p/propaganda/index.html
+++ b/p/propaganda/index.html
@@ -183,7 +183,7 @@
 				<a id="Serbia"></a>Serbia
 			</h4>
 			<p>
-				The <a href="/s/semlin/index.html">Semlin Camp</a> (also called Sajmište Camp) was the only location of significance in Serbia within the framework of the Holocaust. Some 7,000 Jews are said to have been killed there in early 1942 using gas vans. Their bodies were later allegedly exhumed and tracelessly burned within the framework of <a href="/a/aktion-1005/index.html"><i>Aktion</i> 1005</a>. Hence, there is not only no trace of that crime, but also no trace that the crime&rsquo;s traces were eradicated. (See the entry on <a href="/s/semlin/index.html">Semlin</a> for more details.)
+				The <a href="/s/semlin/index.html">Semlin Camp</a> (also called Sajmi&scaron;te Camp) was the only location of significance in Serbia within the framework of the Holocaust. Some 7,000 Jews are said to have been killed there in early 1942 using gas vans. Their bodies were later allegedly exhumed and tracelessly burned within the framework of <a href="/a/aktion-1005/index.html"><i>Aktion</i> 1005</a>. Hence, there is not only no trace of that crime, but also no trace that the crime&rsquo;s traces were eradicated. (See the entry on <a href="/s/semlin/index.html">Semlin</a> for more details.)
 			</p>
 			<p>
 				After all Jews had been murdered (or transferred elsewhere), the camp was converted to a detention and labor camp for political prisoners and partisans.
