--- a/r/index.html
+++ b/r/index.html
@@ -49,7 +49,7 @@
 						<li><a href="/r/rosenblum-joshuah/index.html">Rosenblum, Joshuah</a></li>
 						<li><a href="/r/rosenblum-moritz/index.html">Rosenblum, Moritz</a></li>
 						<li><a href="/r/rosenthal-maryla/index.html">Rosenthal, Maryla</a></li>
-						<li><a href="/r/rosin-arnost/index.html">Rosin, Arnošt</a></li>
+						<li><a href="/r/rosin-arnost/index.html">Rosin, Arno&scaron;t</a></li>
 						<li><a href="/r/rumbula/index.html">Rumbula</a></li>
 					</ul>
 				</div>
