--- a/s/index.html
+++ b/s/index.html
@@ -25,6 +25,7 @@
 						<li><a href="/s/sachsenhausen/index.html">Sachsenhausen</a></li>
 						<li><a href="/s/sackar-josef/index.html">Sackar, Josef</a></li>
 						<li><a href="/s/sadowska-rajzla/index.html">Sadowska, Rajzla</a></li>
+						<li><a href="/s/semlin/index.html">Sajmi&scaron;te</a></li>
 						<li><a href="/s/saunas/index.html">Saunas</a></li>
 						<li><a href="/s/saurer-company/index.html">Saurer Company</a></li>
 						<li><a href="/s/schellekes-maurice/index.html">Schellekes, Maurice</a></li>
