--- a/w/witnesses/index.html
+++ b/w/witnesses/index.html
@@ -167,7 +167,7 @@
 				<li><a href="/r/rosenblum-joshuah/index.html">Rosenblum, Joshuah</a></li>
 				<li><a href="/r/rosenblum-moritz/index.html">Rosenblum, Moritz</a></li>
 				<li><a href="/r/rosenthal-maryla/index.html">Rosenthal, Maryla</a></li>
-				<li><a href="/r/rosin-arnost/index.html">Rosin, Arnošt</a></li>
+				<li><a href="/r/rosin-arnost/index.html">Rosin, Arno&scaron;t</a></li>
 				<li><a href="/s/sackar-josef/index.html">Sackar, Josef</a></li>
 				<li><a href="/s/sadowska-rajzla/index.html">Sadowska, Rajzla</a></li>
 				<li><a href="/s/schellekes-maurice/index.html">Schellekes, Maurice</a></li>
@@ -311,7 +311,7 @@
 				<a id="Mauthausen"></a><a href="/m/mauthausen/index.html">Mauthausen</a>
 			</h4>
 			<ul>
-				<li><a href="/m/marsalek-hans/index.html">Marš&aacute;lek, Hans</a></li>
+				<li><a href="/m/marsalek-hans/index.html">Mar&scaron;&aacute;lek, Hans</a></li>
 			</ul>
 			<h4>
 				<a id="Mogilev"></a><a href="/m/mogilev/index.html">Mogilev</a>
