--- a/w/war-refugee-board-report/index.html
+++ b/w/war-refugee-board-report/index.html
@@ -32,10 +32,10 @@
 			<ul>
 				<li>Jerzy Weso&#322;owski, who later assumed the name <a href="/t/tabeau-jerzy/index.html">Jerzy Tabeau</a>. He escaped from <a href="/a/auschwitz/index.html">Auschwitz</a> in late November 1943, and wrote his essay at the turn of 1943/1944. It was included in the WRB Report anonymously as written by a <q>Polish major.</q></li>
 				<li><a href="/w/wetzler-alfred/index.html">Alfred Wetzler</a> and <a href="/v/vrba-rudolf/index.html">Walter Rosenberg</a>, who escaped on 7 April 1944, and wrote their essay in May 1944. After his escape from Auschwitz, Rosenberg had assumed the pseudonym <a href="/v/vrba-rudolf/index.html">Rudolf Vrba</a>, which he kept for the rest of his life.</li>
-				<li><a href="/m/mordowicz-czeslaw/index.html">Czes&#322;aw Mordowicz</a> and <a href="/r/rosin-arnost/index.html">Arnošt Rosin</a>, who escaped on 27 May 1944. Their text was not fully included in the WRB report, but only its main parts as a sequel to Wetzler&rsquo;s and Vrba&rsquo;s text.</li>
+				<li><a href="/m/mordowicz-czeslaw/index.html">Czes&#322;aw Mordowicz</a> and <a href="/r/rosin-arnost/index.html">Arno&scaron;t Rosin</a>, who escaped on 27 May 1944. Their text was not fully included in the WRB report, but only its main parts as a sequel to Wetzler&rsquo;s and Vrba&rsquo;s text.</li>
 			</ul>
 			<p>
-				For a critique of these three texts, see the entries of <a href="/t/tabeau-jerzy/index.html">Jerzy Tabeau</a>, <a href="/v/vrba-rudolf/index.html">Rudolf Vrba</a> and <a href="/r/rosin-arnost/index.html">Arnošt Rosin</a>.
+				For a critique of these three texts, see the entries of <a href="/t/tabeau-jerzy/index.html">Jerzy Tabeau</a>, <a href="/v/vrba-rudolf/index.html">Rudolf Vrba</a> and <a href="/r/rosin-arnost/index.html">Arno&scaron;t Rosin</a>.
 			</p>
 			<p>
 				With the WRB Report, the U.S. government officially adopted the orthodox <a href="/a/auschwitz/index.html">Auschwitz</a> narrative as spread since 1942 by the Auschwitz Camp&rsquo;s underground movement.
