--- a/y/yugoslavia/index.html
+++ b/y/yugoslavia/index.html
@@ -7,7 +7,7 @@
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
 <!-- end bbinclude -->
-	<title>Yugoslavia (Croatia) | Holocaust Encyclopedia</title>
+	<title>Yugoslavia (Serbia, Croatia) | Holocaust Encyclopedia</title>
 </head>
 <body>
 <!-- #bbinclude "page-header-small.incl" -->
@@ -17,7 +17,7 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				Yugoslavia <small>(Croatia)</small>
+				Yugoslavia <small>(Serbia, Croatia)</small>
 			</h2>
 			<audio controls src="Yugoslavia.mp3"></audio>
 			<p>
