--- a/s/index.html
+++ b/s/index.html
@@ -39,6 +39,7 @@
 						<li><a href="/s/selections/index.html">Selections</a></li>
 						<li><a href="/s/self-immolating-bodies/index.html">Self-Immolating Bodies</a></li>
 						<li><a href="/s/semlin/index.html">Semlin</a></li>
+						<li><a href="/y/yugoslavia/index.html">Serbia</a></li>
 						<li><a href="/s/shanghai/index.html">Shanghai</a></li>
 						<li><a href="/s/sheftel-yoram/index.html">Sheftel, Yoram</a></li>
 						<li><a href="/s/shoes-of-deportees/index.html">Shoes of Deportees</a></li>
