encode special character

--- a/f/flames-out-of-crematory-chimneys/index.html
+++ b/f/flames-out-of-crematory-chimneys/index.html
@@ -80,7 +80,7 @@
 				<li>Sylvain Kaufmann</li>
 				<li><a href="/l/levi-primo/index.html">Primo Levi</a></li>
 				<li>Ren&eacute;e Louria</li>
-				<li>Françoise Maous</li>
+				<li>Fran&ccedil;oise Maous</li>
 				<li>Edmond Michelet</li>
 				<li>Liana Millu</li>
 				<li>Pierre Nivromont</li>
