--- a/i/international-military-tribunal/index.html
+++ b/i/international-military-tribunal/index.html
@@ -154,7 +154,7 @@
 					<tr>
 						<td>France:</td>
 						<td>Henri de Vabres</td>
-						<td>François de Menthon</td>
+						<td>Fran&ccedil;ois de Menthon</td>
 					</tr>
 					<tr>
 						<td>USSR:</td>
