--- a/r/rassinier-paul/index.html
+++ b/r/rassinier-paul/index.html
@@ -55,9 +55,9 @@
 				Works by Rassinier 
 			</h4>
 			<ul>
-				<li><i>Passage de la ligne,</i> La Librairie française, Paris, 1948.</li>
-				<li><i>Le mensonge d&rsquo;Ulysse,</i> La Librairie française, Paris, 1950.</li>
-				<li><i>Ulysse trahi par les siens,</i> La Librairie Française, Paris, 1961.</li>
+				<li><i>Passage de la ligne,</i> La Librairie fran&ccedil;aise, Paris, 1948.</li>
+				<li><i>Le mensonge d&rsquo;Ulysse,</i> La Librairie fran&ccedil;aise, Paris, 1950.</li>
+				<li><i>Ulysse trahi par les siens,</i> La Librairie Fran&ccedil;aise, Paris, 1961.</li>
 				<li><i>Le v&eacute;ritable proc&eacute;s Eichmann ou les vainquers incorrigibles,</i> Les Sept Couleurs, Paris, 1962.</li>
 				<li><i>Le drame des juifs europ&eacute;ens,</i> Paris, 1964.</li>
 				<li><i>L&rsquo;op&eacute;ration vicaire,</i> La Table Ronde, Paris, 1965.</li>
