--- a/s/index.html
+++ b/s/index.html
@@ -68,7 +68,7 @@
 						<li><a href="/s/stanek-franciszek/index.html">Stanek, Franciszek</a></li>
 						<li><a href="/s/stangl-franz/index.html">Stangl, Franz</a></li>
 						<li><a href="/s/stark-hans/index.html">Stark, Hans</a></li>
-						<li><a href="/s/steiner-jean-francois/index.html">Steiner, Jean-François</a></li>
+						<li><a href="/s/steiner-jean-francois/index.html">Steiner, Jean-Fran&ccedil;ois</a></li>
 						<li><a href="/s/stern-ursula/index.html">Stern, Ursula</a></li>
 						<li><a href="/s/steyuk-yakov/index.html">Steyuk, Yakov</a></li>
 						<li><a href="/s/strawczynski-oskar/index.html">Strawczy&#324;ski, Oskar</a></li>
