--- a/s/self-immolating-bodies/index.html
+++ b/s/self-immolating-bodies/index.html
@@ -50,7 +50,7 @@
 				<li><a href="/n/nagraba-ludwik/index.html">Ludwik Nagraba</a></li>
 				<li><a href="/p/paisikovic-dov/index.html">Dov Paisikovic</a></li>
 				<li><a href="/r/rajchman-chil/index.html">Chil Rajchman</a></li>
-				<li><a href="/s/steiner-jean-francois/index.html">Jean-François Steiner</a></li>
+				<li><a href="/s/steiner-jean-francois/index.html">Jean-Fran&ccedil;ois Steiner</a></li>
 				<li><a href="/s/suchomel-franz/index.html">Franz Suchomel</a></li>
 				<li><a href="/s/suss-franz/index.html">Franz S&uuml;ss</a></li>
 				<li><a href="/t/tabeau-jerzy/index.html">Jerzy Tabeau</a></li>
