reformat TOC listing code

--- a/j/index.html
+++ b/j/index.html
@@ -17,10 +17,10 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				J 
+				J
 			</h2>
 			<div id="toc">
-				<ul>
+				<ul class="columns">
 					<li><a href="/j/jager-report/index.html">J&auml;ger Report</a></li>
 					<li><a href="/j/jager-karl/index.html">J&auml;ger, Karl</a></li>
 					<li><a href="/j/jankowski-stanislaw/index.html">Jankowski, Stanis&#322;aw</a></li>
