--- a/o/index.html
+++ b/o/index.html
@@ -17,10 +17,10 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				O 
+				O
 			</h2>
 			<div id="toc">
-				<ul>
+				<ul class="columns">
 					<li><a href="/o/oberhauser-josef/index.html">Oberhauser, Josef</a></li>
 					<li><a href="/o/obrycki-narcyz-tadeusz/index.html">Obrycki, Narcyz Tadeusz</a></li>
 					<li><a href="/o/ochshorn-isaac-egon/index.html">Ochshorn, Isaac Egon</a></li>
