--- a/s/index.html
+++ b/s/index.html
@@ -17,11 +17,10 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				S 
+				S
 			</h2>
-			<div class="columns">
 				<div id="toc">
-					<ul>
+					<ul class="columns">
 						<li><a href="/s/sachsenhausen/index.html">Sachsenhausen</a></li>
 						<li><a href="/s/sackar-josef/index.html">Sackar, Josef</a></li>
 						<li><a href="/s/sadowska-rajzla/index.html">Sadowska, Rajzla</a></li>
@@ -86,7 +85,6 @@
 						<li><a href="/s/szmajzner-stanislaw/index.html">Szmajzner, Stanis&#322;aw</a></li>
 						<li><a href="/s/szperling-henike/index.html">Szperling, Henike</a></li>
 					</ul>
-				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
