--- a/v/index.html
+++ b/v/index.html
@@ -17,10 +17,10 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				V 
+				V
 			</h2>
 			<div id="toc">
-				<ul>
+				<ul class="columns">
 					<li><a href="/v/vaillant-couturier-marie-claude/index.html">Vaillant-Couturier, Marie-Claude</a></li>
 					<li><a href="/v/van-den-bergh-siegfried/index.html">van den Bergh, Siegfried</a></li>
 					<li><a href="/v/van-herwaarden-maria/index.html">Van Herwaarden, Maria</a></li>
