--- a/a/index.html
+++ b/a/index.html
@@ -17,10 +17,10 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				A 
+				A
 			</h2>
 			<div id="toc">
-				<ul>
+				<ul class="columns">
 					<li><a href="/a/absurd-claims/index.html">Absurd Claims</a></li>
 					<li><a href="/a/adametz-gerhard/index.html">Adametz, Gerhard</a></li>
 					<li><a href="/a/air-photos/index.html">Air Photos</a></li>
