--- a/b/index.html
+++ b/b/index.html
@@ -17,11 +17,10 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				B 
+				B
 			</h2>
-			<div class="columns">
 				<div id="toc">
-					<ul>
+					<ul class="columns">
 						<li><a href="/b/babi-yar/index.html">Babi Yar</a></li>
 						<li><a href="/b/bach-zelewski-erich-von-dem/index.html">Bach-Zelewski, Erich von dem</a></li>
 						<li><a href="/b/bacon-yehuda/index.html">Bacon, Yehuda</a></li>
@@ -88,7 +87,6 @@
 						<li><a href="/b/bunkers/index.html">Bunkers</a></li>
 						<li><a href="/b/burmeister-walter/index.html">Burmeister, Walter</a></li>
 					</ul>
-				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
