--- a/c/index.html
+++ b/c/index.html
@@ -17,11 +17,10 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				C 
+				C
 			</h2>
-			<div class="columns">
 				<div id="toc">
-					<ul>
+					<ul class="columns">
 						<li><a href="/c/camps/index.html">Camps</a></li>
 						<li><a href="/c/carbon-monoxide/index.html">Carbon Monoxide</a></li>
 						<li><a href="/c/censorship/index.html">Censorship</a></li>
@@ -55,7 +54,6 @@
 						<li><a href="/c/czechia/index.html">Czechia</a></li>
 						<li><a href="/c/czechowicz-aron/index.html">Czechowicz, Aron</a></li>
 					</ul>
-				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
