--- a/d/index.html
+++ b/d/index.html
@@ -17,11 +17,10 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				D 
+				D
 			</h2>
-			<div class="columns">
 				<div id="toc">
-					<ul>
+					<ul class="columns">
 						<li><a href="/d/dachau/index.html">Dachau</a></li>
 						<li><a href="/d/dachau-museum/index.html">Dachau Museum</a></li>
 						<li><a href="/d/dachau-trials/index.html">Dachau Trials</a></li>
@@ -51,7 +50,6 @@
 						<li><a href="/d/dragon-szlama/index.html">Dragon, Szlama</a></li>
 						<li><a href="/d/dugin-itzhak/index.html">Dugin, Itzhak</a></li>
 					</ul>
-				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
