--- a/e/index.html
+++ b/e/index.html
@@ -17,11 +17,10 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				E 
+				E
 			</h2>
-			<div class="columns">
 				<div id="toc">
-					<ul>
+					<ul class="columns">
 						<li><a href="/e/eberl-irmfried/index.html">Eberl, Irmfried</a></li>
 						<li><a href="/e/edelman-salman/index.html">Edelman, Salman</a></li>
 						<li><a href="/e/ehrenburg-ilya/index.html">Ehrenburg, Ilya</a></li>
@@ -47,7 +46,6 @@
 						<li><a href="/e/extermination-camps/index.html">Extermination Camps</a></li>
 						<li><a href="/e/extirpation/index.html">Extirpation (<i>Ausrottung, Vernichtung</i>)</a></li>
 					</ul>
-				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
