--- a/f/index.html
+++ b/f/index.html
@@ -17,11 +17,10 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				F 
+				F
 			</h2>
-			<div class="columns">
 				<div id="toc">
-					<ul>
+					<ul class="columns">
 						<li><a href="/f/fabian-bela/index.html">Fabian, Bela</a></li>
 						<li><a href="/f/faitelson-alex/index.html">Faitelson, Alex</a></li>
 						<li><a href="/f/fajgielbaum-srul/index.html">Fajgielbaum, Srul</a></li>
@@ -60,7 +59,6 @@
 						<li><a href="/f/fumigation-gas-chamber/index.html">Fumigation Gas Chamber</a></li>
 						<li><a href="/f/furnace/index.html">Furnace</a></li>
 					</ul>
-				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
