--- a/h/index.html
+++ b/h/index.html
@@ -17,11 +17,10 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				H 
+				H
 			</h2>
-			<div class="columns">
 				<div id="toc">
-					<ul>
+					<ul class="columns">
 						<li><a href="/e/emigration/index.html">Haavara Agreement</a></li>
 						<li><a href="/h/hahle-johannes/index.html">H&auml;hle, Johannes</a></li>
 						<li><a href="/h/hair-of-deportees/index.html">Hair of Deportees</a></li>
@@ -54,7 +53,6 @@
 						<li><a href="/h/hungary/index.html">Hungary</a></li>
 						<li><a href="/h/hydrogen-cyanide/index.html">Hydrogen Cyanide</a></li>
 					</ul>
-				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
