--- a/i/index.html
+++ b/i/index.html
@@ -17,11 +17,10 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				I 
+				I
 			</h2>
-			<div class="columns">
 				<div id="toc">
-					<ul>
+					<ul class="columns">
 						<li><a href="/i/i-g-farbenindustrie-ag/index.html">I.G. Farbenindustrie AG</a></li>
 						<li><a href="/i/instruments-of-extermination/index.html">Instruments, of Extermination</a></li>
 						<li><a href="/i/intentionality/index.html">Intentionality</a></li>
@@ -32,7 +31,6 @@
 						<li><a href="/i/israel-bruno/index.html">Israel, Bruno</a></li>
 						<li><a href="/i/italy/index.html">Italy</a></li>
 					</ul>
-				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
