--- a/k/index.html
+++ b/k/index.html
@@ -17,11 +17,10 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				K 
+				K
 			</h2>
-			<div class="columns">
 				<div id="toc">
-					<ul>
+					<ul class="columns">
 						<li><a href="/k/kaduk-oswald/index.html">Kaduk, Oswald</a></li>
 						<li><a href="/k/kaindl-anton/index.html">Kaindl, Anton</a></li>
 						<li><a href="/k/kaltenbrunner-ernst/index.html">Kaltenbrunner, Ernst</a></li>
@@ -62,7 +61,6 @@
 						<li><a href="/k/kulka-erich/index.html">Kulka, Erich</a></li>
 						<li><a href="/c/chelmno/index.html">Kulmhof</a></li>
 					</ul>
-				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
