--- a/n/index.html
+++ b/n/index.html
@@ -17,10 +17,10 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				N 
+				N
 			</h2>
 			<div id="toc">
-				<ul>
+				<ul class="columns">
 					<li><a href="/n/nadsari-marcel/index.html">Nadsari, Marcel</a></li>
 					<li><a href="/n/nagraba-ludwik/index.html">Nagraba, Ludwik</a></li>
 					<li><a href="/n/nahon-marco/index.html">Nahon, Marco</a></li>
