--- a/r/index.html
+++ b/r/index.html
@@ -17,11 +17,10 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				R 
+				R
 			</h2>
-			<div class="columns">
 				<div id="toc">
-					<ul>
+					<ul class="columns">
 						<li><a href="/r/rabinowicz-jakub/index.html">Rabinowicz, Jakub</a></li>
 						<li><a href="/r/rajchman-chil/index.html">Rajchman, Chil</a></li>
 						<li><a href="/r/rajgrodzki-jerzy/index.html">Rajgrodzki, Jerzy</a></li>
@@ -52,7 +51,6 @@
 						<li><a href="/r/rosin-arnost/index.html">Rosin, Arno&scaron;t</a></li>
 						<li><a href="/r/rumbula/index.html">Rumbula</a></li>
 					</ul>
-				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
