--- a/t/index.html
+++ b/t/index.html
@@ -17,11 +17,10 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				T 
+				T
 			</h2>
-			<div class="columns">
 				<div id="toc">
-					<ul>
+					<ul class="columns">
 						<li><a href="/t/tabeau-jerzy/index.html">Tabeau, Jerzy</a></li>
 						<li><a href="/t/tauber-henryk/index.html">Tauber, Henryk</a></li>
 						<li><a href="/t/tesch-stabenow/index.html">Tesch &amp; Stabenow</a></li>
@@ -42,7 +41,6 @@
 						<li><a href="/t/turowski-eugeniusz/index.html">Turowski, Eugeniusz</a></li>
 						<li><a href="/t/typhus/index.html">Typhus</a></li>
 					</ul>
-				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
