--- a/u/index.html
+++ b/u/index.html
@@ -17,10 +17,10 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				U 
+				U
 			</h2>
 			<div id="toc">
-				<ul>
+				<ul class="columns">
 					<li><a href="/u/uhlenbrock-kurt/index.html">Uhlenbrock, Kurt</a></li>
 					<li><a href="/u/ukraine/index.html">Ukraine</a></li>
 					<li><a href="/u/uthgenannt-otto/index.html">Uthgenannt, Otto</a></li>
