--- a/w/index.html
+++ b/w/index.html
@@ -17,11 +17,10 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				W 
+				W
 			</h2>
-			<div class="columns">
 				<div id="toc">
-					<ul>
+					<ul class="columns">
 						<li><a href="/w/wael-monique-de/index.html">Wael, Monique de</a></li>
 						<li><a href="/w/walter-bernhard/index.html">Walter, Bernhard</a></li>
 						<li><a href="/w/wannsee-conference/index.html">Wannsee Conference</a></li>
@@ -58,7 +57,6 @@
 						<li><a href="/w/wolken-otto/index.html">Wolken, Otto</a></li>
 						<li><a href="/w/wolzek/index.html">Wolzek</a></li>
 					</ul>
-				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
