--- a/y/index.html
+++ b/y/index.html
@@ -17,10 +17,10 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				Y 
+				Y
 			</h2>
 			<div id="toc">
-				<ul>
+				<ul class="columns">
 					<li><a href="/y/yad-vashem/index.html">Yad Vashem</a></li>
 					<li><a href="/y/yugoslavia/index.html">Yugoslavia</a></li>
 				</ul>
