--- a/z/index.html
+++ b/z/index.html
@@ -17,10 +17,10 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				Z 
+				Z
 			</h2>
 			<div id="toc">
-				<ul>
+				<ul class="columns">
 					<li><a href="/z/zabecki-franciszek/index.html">Z&#261;becki, Franciszek</a></li>
 					<li><a href="/z/zaydel-matvey/index.html">Zaydel, Matvey</a></li>
 					<li><a href="/z/zentrale-stelle/index.html">Zentrale Stelle</a></li>
