--- a/h/hofer-fritz/index.html
+++ b/h/hofer-fritz/index.html
@@ -25,7 +25,7 @@
 				During the war, Fritz H&ouml;fer was a truck driver for German units. On 27 August 1959, he testified during West-German investigations on the alleged mass shooting of Kiev Jews at <a href="/b/babi-yar/index.html">Babi Yar</a>. He claims to have driven a truck to the ravine in order to get loaded up with items left behind by the Jews when walking up to their execution. According to him, the Jews left their clothes on the high plateau above the Babi Yar ravine in such a fashion that every item of clothing had its own pile. Hence, the items were pre-sorted by types, such as shoes, coats, trousers etc. 
 			</p>
 			<p>
-				However, the photos taken by <a href="/hahle-johannes/index.html">Johannes H&auml;hle</a> presumably showing the items left behind by the executed Jews are all at the <i>bottom</i> of the ravine, and they were dumped randomly onto the ground. There are no piles, and most certainly no piles of pre-sorted items. 
+				However, the photos taken by <a href="/h/hahle-johannes/index.html">Johannes H&auml;hle</a> presumably showing the items left behind by the executed Jews are all at the <i>bottom</i> of the ravine, and they were dumped randomly onto the ground. There are no piles, and most certainly no piles of pre-sorted items. 
 			</p>
 			<p>
 				H&ouml;fer claimed that the Jews &mdash; men, women and children &mdash; had to walk down into the ravine through two <q>entrance ways</q> and lay down on already executed Jews, where they themselves were then shot. Only two men did all the shooting, while one man made sure the Jews arranged themselves conveniently for the shooter to kill them. The shooter walked across the wobbly surface of already shot Jews from one pre-arranged Jew to the next. 
