--- a/o/obrycki-narcyz-tadeusz/index.html
+++ b/o/obrycki-narcyz-tadeusz/index.html
@@ -32,7 +32,7 @@
 				<li>Two corpses were loaded into one muffle at a time &mdash; whereas these muffles were designed for only one corpse. Although loading two would have been physically possible, it wouldn&rsquo;t have had much of an advantage, if any.</li>
 				<li>Five million Jews were cremated in the crematoria and on the pyres &mdash; one million more than the Soviets&rsquo; atrocity lie, and four million more than today&rsquo;s mainstream narrative.</li>
 				<li>The crematorium staff was liquidated every three months &mdash; this is the echo of a rumor proven false by the many survivors of this staff.</li>
-				<li>These crematorium staff members slated for murder were gassed at a facility in Gleiwitz (today&rsquo;s Gliwice), where no such facility existed. That&rsquo;s a lie invented by <a href="/kula-michal/index.html">Micha&#322; Kula</a>, and as such we see here another <q><a href="/c/convergence-of-evidence/index.html">convergence of evidence</a></q> on a lie.</li>
+				<li>These crematorium staff members slated for murder were gassed at a facility in Gleiwitz (today&rsquo;s Gliwice), where no such facility existed. That&rsquo;s a lie invented by <a href="/k/kula-michal/index.html">Micha&#322; Kula</a>, and as such we see here another <q><a href="/c/convergence-of-evidence/index.html">convergence of evidence</a></q> on a lie.</li>
 			</ul>
 			<p>
 				(For details, see <a href="/bibliography/index.html#Mattogno2021">Mattogno 2021</a>, pp. 393-395.) 
