--- a/s/skarzynski-kazimierz/index.html
+++ b/s/skarzynski-kazimierz/index.html
@@ -28,7 +28,7 @@
 				In his first deposition, he claimed to know from Jews incarcerated at Treblinka that Jews were killed <q>in hermetically sealed chambers [&hellip;] by pumping out the air.</q> However, creating a vacuum in a brick-and-mortar building is technically impossible (the external pressure would crush the walls), hence most certainly was not done. 
 			</p>
 			<p>
-				In his second deposition, evidently cajoled by the Soviet investigators, he removed the reference to vacuum chambers and merely stated that Jews were killed <q>in a special chamber.</q> This resembles the testimonies of <a href="/kon-abe/index.html">Abe Kon</a>. (See <a href="/bibliography/index.html#Mattogno2021e">Mattogno 2021e</a>, pp. 137f.) 
+				In his second deposition, evidently cajoled by the Soviet investigators, he removed the reference to vacuum chambers and merely stated that Jews were killed <q>in a special chamber.</q> This resembles the testimonies of <a href="/k/kon-abe/index.html">Abe Kon</a>. (See <a href="/bibliography/index.html#Mattogno2021e">Mattogno 2021e</a>, pp. 137f.) 
 			</p>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
