--- a/e/einsatzgruppen/index.html
+++ b/e/einsatzgruppen/index.html
@@ -1554,7 +1554,7 @@
 						<td> 144 </td>
 					</tr>
 					<tr>
-						<td><a href="/p/einsatzgruppen/ponary/index.html">Ponary</a>/Vilnius</td>
+						<td><a href="/p/ponary/index.html">Ponary</a>/Vilnius</td>
 						<td> 2,231 </td>
 						<td> 38,000 to 80,000 </td>
 						<td> 17-36 </td>
