--- a/w/weliczker-leon/index.html
+++ b/w/weliczker-leon/index.html
@@ -56,7 +56,7 @@
 				However, because there are no other informative sources for the alleged exhumation and cremation activities near <a href="/l/lviv/index.html">Lviv</a>, Weliczker&rsquo;s ludicrous novel is the mainstay upon which almost the entire load of the orthodox narrative of these alleged events rests. 
 			</p>
 			<p>
-				(For other, far-less informative witnesses, see the entries on <a href="/b/beer-abraham/index.html">Abraham Beer</a>, <a href="/c/chamaides-heinrich/index.html">Heinrich Chamaides</a>, <a href="/k/korn-moische/index.html">Moische Korn</a> and <a href="/manusevich-david/index.html">David Manusevich</a>; for more details on Weliczker, see <a href="/bibliography/index.html#Mattogno2021c">Mattogno 2021c</a>, pp. 489-513.) 
+				(For other, far-less informative witnesses, see the entries on <a href="/b/beer-abraham/index.html">Abraham Beer</a>, <a href="/c/chamaides-heinrich/index.html">Heinrich Chamaides</a>, <a href="/k/korn-moische/index.html">Moische Korn</a> and <a href="/m/manusevich-david/index.html">David Manusevich</a>; for more details on Weliczker, see <a href="/bibliography/index.html#Mattogno2021c">Mattogno 2021c</a>, pp. 489-513.) 
 			</p>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
