--- a/p/podchlebnik-michal/index.html
+++ b/p/podchlebnik-michal/index.html
@@ -28,7 +28,7 @@
 				</figcaption>
 			</figure>
 			<p>
-				Micha&#322; Podchlebnik was a Polish Jew who, during his interrogation by Judge <a href="/b/bednarz-wladyslaw/index.html">Bednarz</a> on 9 June 1945, claimed to have been deported to the <a href="/c/chelmno/index.html">Che&#322;mno Camp</a> in late December 1941 or early January 1942, depending on which of his statements we believe, and escaped from there after just a few days. He is one of only three Che&#322;mno inmates who have testified about their alleged experiences. The other two are <a href="/srebrnik-szymon/index.html">Szymon Srebrnik</a> and <a href="/z/zurawski-mieczyslaw/index.html">Mieczys&#322;aw &#379;urawski</a>. 
+				Micha&#322; Podchlebnik was a Polish Jew who, during his interrogation by Judge <a href="/b/bednarz-wladyslaw/index.html">Bednarz</a> on 9 June 1945, claimed to have been deported to the <a href="/c/chelmno/index.html">Che&#322;mno Camp</a> in late December 1941 or early January 1942, depending on which of his statements we believe, and escaped from there after just a few days. He is one of only three Che&#322;mno inmates who have testified about their alleged experiences. The other two are <a href="/s/srebrnik-szymon/index.html">Szymon Srebrnik</a> and <a href="/z/zurawski-mieczyslaw/index.html">Mieczys&#322;aw &#379;urawski</a>. 
 			</p>
 			<p>
 				Here are some of the peculiar claims he made in them: 
