--- a/w/witnesses-against-mass-murder/index.html
+++ b/w/witnesses-against-mass-murder/index.html
@@ -42,7 +42,7 @@
 				<li><a href="/l/levi-primo/index.html">Primo Levi</a> (<a href="/a/auschwitz/index.html">Auschwitz</a>)</li>
 				<li><a href="/n/nowodowski-dawid/index.html">Dawid Nowodowski</a> (<a href="/t/treblinka/index.html">Treblinka</a>)</li>
 				<li><a href="/r/rosenthal-maryla/index.html">Maryla Rosenthal</a> (<a href="/a/auschwitz/index.html">Auschwitz</a>)</li>
-				<li><a href="/sadowska-rajzla/index.html">Rajzla Sadowska</a> (<a href="/a/auschwitz/index.html">Auschwitz</a>)</li>
+				<li><a href="/s/sadowska-rajzla/index.html">Rajzla Sadowska</a> (<a href="/a/auschwitz/index.html">Auschwitz</a>)</li>
 				<li><a href="/s/schelvis-jules/index.html">Jules Schelvis</a> (<a href="/s/sobibor/index.html">Sobib&oacute;r</a>)</li>
 				<li><a href="/s//suss-franz/index.html">Franz S&uuml;ss</a></li>
 				<li><a href="/a/auschwitz/index.html">Auschwitz</a></li>
