--- a/h/hofer-fritz/index.html
+++ b/h/hofer-fritz/index.html
@@ -40,7 +40,7 @@
 				And if H&ouml;fer was loading up clothes outside and away from the ravine, how would he have known the particulars of the shootings? 
 			</p>
 			<p>
-				Another German witness, <a href="/werner-kurt/index.html">Kurt Werner</a>, who claims to have shot victims at Babi Yar, stated that there were 12 shooters. That would have reduced the workload per shooter to one per minute. 
+				Another German witness, <a href="/w/werner-kurt/index.html">Kurt Werner</a>, who claims to have shot victims at Babi Yar, stated that there were 12 shooters. That would have reduced the workload per shooter to one per minute. 
 			</p>
 			<p>
 				(For more details, see the entry on <a href="/b/babi-yar/index.html">Babi Yar</a>, as well as <a href="/bibliography/index.html#Mattogno2022c">Mattogno 2022c</a>, pp. 572f.) 
