--- a/k/korn-moische/index.html
+++ b/k/korn-moische/index.html
@@ -25,7 +25,7 @@
 				Moische Korn was a Jew who claimed to have been forced by German units in 1943 to exhume mass graves near the city of Lviv, and to burn the extracted bodies on pyres within the context of what today&rsquo;s orthodoxy calls <a href="/a/aktion-1005/index.html"><i>Aktion</i> 1005</a>. He escaped from that unit on 10 October 1944. 
 			</p>
 			<p>
-				In a rather generic statement of 13 September 1944 to Soviet investigators, Korn made claims that are partially at odds with those made by the other two witnesses to this alleged event, <a href="/c/chamaides-heinrich/index.html">Heinrich Chamaides</a> and <a href="/weliczker-leon/index.html">Leon Weliczker</a>. 
+				In a rather generic statement of 13 September 1944 to Soviet investigators, Korn made claims that are partially at odds with those made by the other two witnesses to this alleged event, <a href="/c/chamaides-heinrich/index.html">Heinrich Chamaides</a> and <a href="/w/weliczker-leon/index.html">Leon Weliczker</a>. 
 			</p>
 			<p>
 				Korn claimed that the pyres he built measured <q>10 x 10 x 10 meters,</q> which can be dismissed safely as a vast exaggeration, as proper pyres for <a href="/o/open-air-incinerations/index.html">open-air incinerations</a> are usually only one body-length wide and up to 2 m high. Building and maintaining the burning of anything bigger is too challenging and impractical: Did the inmates have a crane to get bodies and wood onto layers more than 2 meters off the ground? And how did they prevent this huge pile, which inevitably burned unevenly, from toppling over, spilling embers, burning wood and partially burned body parts all over the place? 
