--- a/c/chamaides-heinrich/index.html
+++ b/c/chamaides-heinrich/index.html
@@ -40,7 +40,7 @@
 				Cremating an average human body during <a href="/o/open-air-incinerations/index.html">open-air incinerations</a> requires some 250 kg of freshly cut wood. Cremating 120,000 bodies thus requires some 30,000 metric tons of wood. This would have required the felling of all trees growing in a 50-year-old spruce forest covering almost 67 hectares of land, or some 149 American football fields. An average prisoner is rated at being able to cut some 0.63 metric tons of fresh wood per workday. To cut this amount of wood within the six month (160 days) that this operation supposedly lasted would have required a work force of some 300 dedicated <a href="/l/lumberjacks/index.html">lumberjacks</a> just to cut the wood. Chamaides claimed his unit consisted only of 126 inmates, all busy digging out mass graves, extracting bodies, building pyres, sifting through ashes, scattering the ashes, refilling the graves with soil, and planting them with grass seeds and saplings. He said nothing about where the firewood came from. 
 			</p>
 			<p>
-				While there are a few numerical and temporal discrepancies between this account and the one by <a href="/weliczker-leon/index.html">Leon Weliczker</a>, the main witness on these alleged events, the more revealing aspect of Chamaides&rsquo;s is the following crude atrocity propaganda: 
+				While there are a few numerical and temporal discrepancies between this account and the one by <a href="/w/weliczker-leon/index.html">Leon Weliczker</a>, the main witness on these alleged events, the more revealing aspect of Chamaides&rsquo;s is the following crude atrocity propaganda: 
 			</p>
 			<blockquote>
 				<p>
