--- a/c/cliches-about-the-holocaust/index.html
+++ b/c/cliches-about-the-holocaust/index.html
@@ -118,7 +118,7 @@
 				Lampshades and Other Objects Made of Human Skin
 			</h6>
 			<p>
-				<i>Clich&eacute;: The SS murdered prisoners with attractive tattoos and turned their skin into everyday objects. This is primarily claimed for the Buchenwald Camp.</i> No such objects have ever been found. The claim is based on a campaign of psychological warfare by the US armed forces. (See the entries <a href="/l/lampshades-of-human-skin/index.html">Lampshades of Human Skin</a>, <a href="/b/buchenwald/index.html">Buchenwald</a> and <a href="/k/koch-ilse/index.html">Ilse Koch</a>).
+				<i>Clich&eacute;: The SS murdered prisoners with attractive tattoos and turned their skin into everyday objects. This is primarily claimed for the Buchenwald Camp.</i> No such objects have ever been found. The claim is based on a campaign of psychological warfare by the U.S. armed forces. (See the entries <a href="/l/lampshades-of-human-skin/index.html">Lampshades of Human Skin</a>, <a href="/b/buchenwald/index.html">Buchenwald</a> and <a href="/k/koch-ilse/index.html">Ilse Koch</a>).
 			</p>
 			<h6>
 				Sardine Packing
