--- a/s/six-million/index.html
+++ b/s/six-million/index.html
@@ -25,7 +25,7 @@
 				Importance
 			</h4>
 			<p>
-				The alleged Six Million Jewish fatalities is the single most important number of the Holocaust, and one of the most consequential statistics in all of history. It appears everywhere that we hear about the Holocaust. The US Holocaust Memorial Museum website writes:
+				The alleged Six Million Jewish fatalities is the single most important number of the Holocaust, and one of the most consequential statistics in all of history. It appears everywhere that we hear about the Holocaust. The U.S. Holocaust Memorial Museum website writes:
 			</p>
 			<blockquote>
 				<p>
