--- a/w/wedding-rings/index.html
+++ b/w/wedding-rings/index.html
@@ -39,7 +39,7 @@
 			</p>
 			<blockquote>
 				<p>
-					Wedding rings taken from prisoners. The rings were found near the Buchenwald concentration camp following liberation by US Army soldiers. Germany, May 1945.
+					Wedding rings taken from prisoners. The rings were found near the Buchenwald concentration camp following liberation by U.S. Army soldiers. Germany, May 1945.
 				</p>
 			</blockquote>
 			<p>
