--- a/v/van-roden-edward-l/index.html
+++ b/v/van-roden-edward-l/index.html
@@ -31,7 +31,7 @@
 				Edward van Roden (1892-1973) was a Pennsylvania judge who served on a special postwar committee (The Simpson Commission) to investigate possible prisoner abuse and torture by Americans against captive Germans.
 			</p>
 			<p>
-				Among the many war crimes of World War Two was the Malmedy Massacre of 17 December 1944. During the Battle of the Bulge, some 120 US soldiers were captured and (allegedly) executed by a Waffen-SS group. In mid-1946, and as part of the post-war <a href="/d/dachau-trials/index.html">Dachau Trials</a>, U.S. prosecutors tried 74 German officers and soldiers for the murders. Eventually, 43 of them were sentenced to death by hanging.
+				Among the many war crimes of World War Two was the Malmedy Massacre of 17 December 1944. During the Battle of the Bulge, some 120 U.S. soldiers were captured and (allegedly) executed by a Waffen-SS group. In mid-1946, and as part of the post-war <a href="/d/dachau-trials/index.html">Dachau Trials</a>, U.S. prosecutors tried 74 German officers and soldiers for the murders. Eventually, 43 of them were sentenced to death by hanging.
 			</p>
 			<p>
 				During the trial, several defendants complained about <a href="/t/torture/index.html">torture</a> and duress of various kinds. Later, about a year and a half after the trial, almost all defendants issued affidavits, complaining of abuse and rescinding their earlier confessions. As a result, U.S. Secretary of the Army Kenneth Royall created the Simpson Commission in mid-1948, which was tasked with investigating these claims. As stated, van Roden was a member of that commission. He travelled with chair <a href="/s/simpson-gordon/index.html">Gordon Simpson</a> to Munich in order to investigate the matter.
