--- a/c/convergence-of-evidence/index.html
+++ b/c/convergence-of-evidence/index.html
@@ -37,10 +37,10 @@
 				(For more details, see <a href="/bibliography/index.html#Mattogno2019">Mattogno 2019</a>, pp. 389-440; <a href="/bibliography/index.html#Rudolf_Mattogno">Rudolf/Mattogno 2017</a>, pp. 203-280.)
 			</p>
 			<h4>
-				List of entries dealing with forced or real <q>convergence of evidence</q> &mdash; in truth or lies:<br />
-				Air Photos
+				List of entries dealing with forced or real <q>convergence of evidence</q> &mdash; in truth or lies:
 			</h4>
 			<ul>
+				<li><a href="/a/air-photos/index.html">Air Photos</a></li>
 				<li><a href="/a/amiel-szymon/index.html">Amiel, Szymon</a></li>
 				<li><a href="/b/babi-yar/index.html">Babi Yar</a></li>
 				<li><a href="/b/bednarz-wladyslaw/index.html">Bednarz, W&#322;adys&#322;aw</a></li>
