convert special characters

--- a/b/bily-henry/index.html
+++ b/b/bily-henry/index.html
@@ -26,7 +26,7 @@
 			</p>
 			<blockquote>
 				<p>
-					[Bily,] without any references, took whole passages from Dr. Miklos Nyiszli&rsquo;s book <i>M&eacute;decin à Auschwitz,</i> especially chapters 7 and 28 [&hellip;]. Unfortunately the errors made by Dr. Nyiszli were also copied: it concerns the detailed description of the activities of the Auschwitz-Birkenau Sonderkommando to which Henry Bily is said to have belonged. [&hellip;] This analysis shows that the Henry Bily text cannot in any way be considered as an original personal eyewitness report.
+					[Bily,] without any references, took whole passages from Dr. Miklos Nyiszli&rsquo;s book <i>M&eacute;decin &agrave; Auschwitz,</i> especially chapters 7 and 28 [&hellip;]. Unfortunately the errors made by Dr. Nyiszli were also copied: it concerns the detailed description of the activities of the Auschwitz-Birkenau Sonderkommando to which Henry Bily is said to have belonged. [&hellip;] This analysis shows that the Henry Bily text cannot in any way be considered as an original personal eyewitness report.
 				</p>
 			</blockquote>
 <!-- #bbinclude "footer.incl" -->
