--- a/s/special-treatment/index.html
+++ b/s/special-treatment/index.html
@@ -25,7 +25,7 @@
 				General Usage in German Wartime Documents
 			</h4>
 			<p>
-				The German term <i>Sonderbehandlung</i> (special treatment) and other related terms, such as <i>Sonderaktion</i> (special operation) and <i>Sondermaßnahme</i> (special measure) appear on numerous occasions in original German wartime documents.
+				The German term <i>Sonderbehandlung</i> (special treatment) and other related terms, such as <i>Sonderaktion</i> (special operation) and <i>Sonderma&szlig;nahme</i> (special measure) appear on numerous occasions in original German wartime documents.
 			</p>
 			<p>
 				In a general context of the Second World War, German documents containing the term <q>special treatment</q> could have both beneficial as well as detrimental implications. In the latter case, the term was sometimes used as a euphemism for executions or murder. Some of these documents were introduced as such during the Nuremberg <a href="/i/international-military-tribunal/index.html">International Military Tribunal</a> (Documents NO-905, 1944-PS, 3040-PS). However, these have nothing to do with Jews as such. Document 3040-PS, for instance, ordered that serious crimes ought to be punished with special treatment, to be carried out <q>with the noose</q> (<a href="/bibliography/index.html#IMT"><i>IMT</i></a>, Vol. 31, pp. 500-512, here pp. 505-507).
