--- a/w/witnesses/index.html
+++ b/w/witnesses/index.html
@@ -343,7 +343,7 @@
 				<li>Erdmann, Hermann (SS)</li>
 				<li>Filsinger, Walter (SS)</li>
 				<li>Gondzik, Ewald</li>
-				<li>Groß, Hans</li>
+				<li>Gro&szlig;, Hans</li>
 				<li>H&auml;ndler, Josef</li>
 				<li>Hoffmann, Emil</li>
 				<li>Hoffmann, G&uuml;nther</li>
