--- a/bibliography/index.html
+++ b/bibliography/index.html
@@ -571,7 +571,7 @@
 				<li><a id="Zentner"></a>Zentner, Christian. <i>Der gro&szlig;e Bildatlas zur Weltgeschichte,</i> Unipart, Stuttgart, 1982.</li>
 				<li><a id="Zimmermann1989"></a>Zimmermann, Michael 1989. <i>Verfolgt, vertrieben, vernichtet: Die nationalsozialistische Vernichtungspolitik gegen Sinti und Roma,</i> Klartext-Verlag, Essen 1989.</li>
 				<li><a id="Zimmermann1996"></a>Zimmermann, Michael 1996. <i>Rassenutopie und Genozid: Die nationalsozialistische <q>L&ouml;sung der Zigeunerfrage,</q>,</i> Christians, Hamburg, 1996.</li>
-				<li><a id="Zundel"></a>Z&uuml;ndel, Ernst. <i>The Holocaust on Trial</i><i>: The Second Trial against Ernst Z&uuml;ndel 1988,</i> 2nd ed., Castle Hill Publishers, Dallastown, PA, 2022.</li>
+				<li><a id="Zundel"></a>Z&uuml;ndel, Ernst. <i>The Holocaust on Trial: The Second Trial against Ernst Z&uuml;ndel 1988,</i> 2nd ed., Castle Hill Publishers, Dallastown, PA, 2022.</li>
 				<li><a id="Zuroff"></a>Zuroff, Efraim. <i>Occupation Nazi-Hunter: The Continuing Search for the Perpetrators of the Holocaust,</i> KTAV, Hoboken, NJ, 1994.</li>
 			</ul>
 <!-- #bbinclude "footer.incl" -->
